infrastructure/base/rook-ceph-cluster/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.${domain}`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
          serversTransport: ceph-dashboard
  tls:
    secretName: ceph-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-s3
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph-s3.${domain}`)
      kind: Rule
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
  tls:
    secretName: ceph-tls
